tests/parser/group-expression-not-closed.stderr
error: '(' was never closed
 --> $DIR/group-expression-not-closed.lox:1:1
  |
1 | (5 + 7;
  | ^
